# DARE-LQR

./: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
config/: controller.yaml
include/lqr/: lqr.hpp
src/: lqr.cpp
